--- a/DeepLinking/Info.plist
+++ b/DeepLinking/Info.plist
@@ -73,5 +73,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>&quot;ms-word</string>
+	</array>
 </dict>
 </plist>
